Project

General

Profile

Actions

Bug #17745

closed

osd crashes when "radosgw-admin bi list --max-entries=1" command runing

Added by wei qiaomiao over 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

osd log:

2016-10-29 15:00:39.220298 7f696f8d4800 1 osd.0 86 log_to_monitors {default=true}
2016-10-29 15:00:39.220700 7f6967400700 0 -
0.0.0.0:6800/18344 >> - conn(0x7f697c9b2c00 :6800 s=STATE_ACCEPTING_WAIT_BANNER_ADDR pgs=0 cs=0 l=0).fault with nothing to send and in the half accept state just closed
2016-10-29 15:00:39.225205 7f696f8d4800 0 osd.0 86 done with init, starting boot process
2016-10-29 15:00:42.565417 7f694fa52700 20 <cls> /srv/autobuild-ceph/gitbuilder.git/build/rpmbuild/BUILD/ceph-11.0.2/src/cls/rgw/cls_rgw.cc:2528: found 1 plain entries
2016-10-29 15:00:42.569782 7f694fa52700 -1 ** Caught signal (Segmentation fault) *
in thread 7f694fa52700 thread_name:tp_osd_tp

ceph version v11.0.2-720-g2850f1d (2850f1d863b97d4fe2d5c149da743e41537d4fa3)
1: (()+0x8a481a) [0x7f69701ad81a]
2: (()+0xf130) [0x7f696bfad130]
3: (ceph::buffer::ptr::release()+0x31) [0x7f69704af1b1]
4: (std::_List_base&lt;ceph::buffer::ptr, std::allocator&lt;ceph::buffer::ptr&gt; >::_M_clear()+0x27) [0x7f696fca9af7]
5: (()+0xc0669) [0x7f695c56e669]
6: (ClassHandler::ClassMethod::exec(void*, ceph::buffer::list&, ceph::buffer::list&)+0x34) [0x7f696fd65234]
7: (ReplicatedPG::do_osd_ops(ReplicatedPG::OpContext*, std::vector&lt;OSDOp, std::allocator&lt;OSDOp&gt; >&)+0x4728) [0x7f696fe66228]
8: (ReplicatedPG::prepare_transaction(ReplicatedPG::OpContext*)+0xbf) [0x7f696fe7ab0f]
9: (ReplicatedPG::execute_ctx(ReplicatedPG::OpContext*)+0x91f) [0x7f696fe7ba4f]
10: (ReplicatedPG::do_op(std::shared_ptr&lt;OpRequest&gt;&)+0x26f1) [0x7f696fe7fb21]
11: (ReplicatedPG::do_request(std::shared_ptr&lt;OpRequest&gt;&, ThreadPool::TPHandle&)+0x777) [0x7f696fe3b0f7]
12: (OSD::dequeue_op(boost::intrusive_ptr&lt;PG&gt;, std::shared_ptr&lt;OpRequest&gt;, ThreadPool::TPHandle&)+0x41d) [0x7f696fce5efd]
13: (PGQueueable::RunVis::operator()(std::shared_ptr&lt;OpRequest&gt; const&)+0x6d) [0x7f696fce614d]
14: (OSD::ShardedOpWQ::_process(unsigned int, ceph::heartbeat_handle_d*)+0x86c) [0x7f696fd07adc]
15: (ShardedThreadPool::shardedthreadpool_worker(unsigned int)+0x947) [0x7f6970348c37]
16: (ShardedThreadPool::WorkThreadSharded::entry()+0x10) [0x7f697034ad90]
17: (()+0x7df3) [0x7f696bfa5df3]
18: (clone()+0x6d) [0x7f696ae8e3dd]

Related issues 1 (0 open1 closed)

Copied to rgw - Backport #17784: jewel: osd crashes when "radosgw-admin bi list --max-entries=1" command runingResolvedAbhishek VarshneyActions
Actions #2

Updated by Yehuda Sadeh over 7 years ago

  • Priority changed from Normal to Urgent
Actions #3

Updated by Yehuda Sadeh over 7 years ago

  • Assignee set to Yehuda Sadeh
Actions #4

Updated by Yehuda Sadeh over 7 years ago

  • Status changed from New to Pending Backport
  • Backport set to jewel
Actions #5

Updated by Loïc Dachary over 7 years ago

  • Copied to Backport #17784: jewel: osd crashes when "radosgw-admin bi list --max-entries=1" command runing added
Actions #6

Updated by Nathan Cutler about 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF