rgw: fix osd crashes when execute "radosgw-admin bi list --max-entries=1" command

Fixes: http://tracker.ceph.com/issues/17745
Signed-off-by: weiqiaomiao <wei.qiaomiao@zte.com.cn>
(cherry picked from commit 51a4405a1ef59671cbd51c530a84333359d3f3dd)

Conflicts:
	src/cls/rgw/cls_rgw.cc
		trivial resolution